# francisfrancis_x1

./: .gitignore  README.md
cad/: enclosure.blend  enclosure.blend1
firmware/: CMakeLists.txt  lwipopts.h  openocd.cfg  openocd.gdb
firmware/src/: heater.c  heater.h  main.c  max31855.c  max31855.h  pid.c  pid.h  pid_test.c  pwm.pio  server.c  server.h
notebooks/: monitor.livemd
pcb/: bom.csv  fp-info-cache  fp-lib-table  francisfrancisx1.kicad_pcb  francisfrancisx1.kicad_prl  francisfrancisx1.kicad_pro  francisfrancisx1.kicad_sch
pcb/francisfrancisx1.pretty/: CPC40055ST.kicad_mod  plat_silk.kicad_mod
